--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "axios": "^1.5.0"
   }
 }
